[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mezzo-guard"
version = "0.1.0-alpha.3"
description = "Mezzo Guard is a Python SDK designed to provide AI-based content moderation and security for applications."
requires-python = ">=3.11"
dependencies = [
    "transformers",
]
readme = "README.md"
authors = [
    {name="Ryan Studio", email="ryanstudiobusiness@gmail.com"}
]
maintainers = [
    {name="Ryan Studio", email="ryanstudiobusiness@gmail.com"}
]
keywords = [
    # Name Related
    "mezzo guard", "mezzo", "mezzo prompt guard", "mezzo content guard", "mezzo moderation guard", "mezzo jailbreak guard", "mezzo ai", "mezzo security",

    # AI Related
    "LLM", "ai", "artificial intelligence", "ai model", "language model", "inference",

    # Security Related
    "security", "jailbreak", "prompt injection", "prompt guard", "guard", "content guard", "content moderation", "moderation", "ai moderation",

    # General Keywords
    "content safety", "ai safety", "model safety", "application security", "python sdk", "sdk"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mezzoguard"]